Fix the random blue background behind the VP shield icon in the admin toolbar on non-Retina screens.
git-svn-id: https://plugins.svn.wordpress.org/vaultpress/trunk@1533766 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,7 @@ Header
 	left: 8px;
 	width: 16px;
 	height: 21px;
-	background: blue url(images/vp-toolbar-icon-trans.png) no-repeat 0 2px;
+	background: transparent url(images/vp-toolbar-icon-trans.png) no-repeat 0 2px;
 	background-size: 16px;
 }
 
